# AdRecognition

./: .gitignore  CMakeLists.txt  Makefile  README.md  reader.cpp
csv/: NNPO.csv  NNPriRan.csv  RFPO.csv  RFPO.ods
data/: ad_cranfield.name  ad_cranfieldRandomizedSub.test  ad_cranfieldRandomizedSubSub.val  ad_cranfieldSub.test  ad_cranfieldSubSub.valid  ad_randomized.test
data/csv/: NNCross.ods  NNPO.csv  NNPO.ods  NNPri.csv  NNPri.ods  NNPriNor.csv  RFCross.csv  RFCross.ods  RFPO.csv  RFPO.ods  RFPri.csv  RFPri.ods  RFPriNor.csv  RFPriRan.csv  test.csv
data/models/: NNCross.xml  NNFA.xml  NNPO.xml  NNPri.xml  NNPriNor.xml  RFFA.xml  RFPO.xml  RFPri.xml  RFPri.xmlRFPri.xml  RFPri.xmlRFPri.xmlRFPri.xml  RFPri.xmlRFPri.xmlRFPri.xmlRFPri.xml  RFPri.xmlRFPri.xmlRFPri.xmlRFPri.xmlRFPri.xmlRFPri.xmlRFPri.xml  svm.xml  svmLinearCross.xml  svmLinearFA.xml  svmLinearPO.xml  svmLinearPri.xml  svmLinearPriNor.xml  svmPolyCross.xml  svmPolyPO.xml  svmPolyPri.xml  svmRBFCross.xml  svmRBFFA.xml  svmRBFPO.xml  svmSIGMFA.xml  svmSIGMPO.xml  svmSigmCross.xml  svmSigmPO.xml  test.xml
data/stats/: NNPriNor.stats  svmRBFPri.stats  svmSIGMCross.stats
models/: NNPO.xml  NNPriRan.xml  RFPriRan.xml  neural1.xml  svmLinear1.xml  svmLinearPO.model  svmLinearPriRan.xml  svmPoly1.xml  svmPolyFA.xml  svmRBF1.xml  svmSigmoid1.xml
report/: Conclusion.tex  CrossValidation.tex  DataDescription.tex  FirstApproach.tex  Introduction.tex  ParameterOptimization.tex  PriorsNormalization.tex  Questions.tex  Report.tex
src/: modelTester.cpp  neuralNetwork.cpp  randomForest.cpp  randomize.cpp  selectRatio.cpp  selectlines.cpp  svm.cpp
tools/: Makefile  README.txt
